<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_publicacion"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_publica" />
        <item
            android:id="@+id/nav_historial"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_historial" />
        <item
            android:id="@+id/nav_CV"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_CV" />
    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_sesion"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_sesion" />
        </menu>
    </item>

</menu>
