<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.login"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="400dp"
            android:layout_height="350dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ImageView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayoutEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:drawableLeft="@drawable/iconopersona"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:textColor="@color/brown"
                android:textColorHint="@color/brown" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayoutPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/txtLayoutEmail"
            app:layout_constraintStart_toStartOf="@+id/txtLayoutEmail"
            app:layout_constraintTop_toBottomOf="@+id/txtLayoutEmail"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:drawableLeft="@drawable/iconopassword"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/brown"
                android:textColorHint="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvOlvidado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/olvidado"
            app:layout_constraintEnd_toStartOf="@id/tvRegistrate"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/txtLayoutPassword"
            app:layout_constraintTop_toBottomOf="@+id/txtLayoutPassword" />

        <TextView
            android:id="@+id/tvRegistrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_margin="10dp"
            android:text="Registrarse"
            app:layout_constraintTop_toBottomOf="@+id/txtLayoutPassword"
            app:layout_constraintEnd_toEndOf="@+id/txtLayoutPassword"
            app:layout_constraintStart_toEndOf="@id/tvOlvidado" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="169dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_basic"
            android:gravity="center"
            android:text="@string/iniciar"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/tvRegistrate"
            app:layout_constraintStart_toStartOf="@+id/tvOlvidado"
            app:layout_constraintTop_toBottomOf="@+id/tvOlvidado" />

        <ProgressBar
            android:id="@+id/bar_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="@+id/tvRegistrate"
            app:layout_constraintStart_toStartOf="@+id/tvOlvidado"
            app:layout_constraintTop_toTopOf="@+id/btnLogin" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>